--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap" rel="stylesheet">
 </head>
 <body style="background-color:var(--Dark-Blue);">
 
@@ -20,11 +21,11 @@
                 <p class="adviceText">&#8220Click dice to get advice&#8220</p>
             </div>
             <!-- LINE -->
-            <div class="decoration" style="background-image:url(/advice-generator-app-main/images/pattern-divider-desktop.svg);">
+            <div class="decoration" style="background-image:url(advice-generator-app-main/images/pattern-divider-desktop.svg);">
             </div> 
             <!-- DICE -->
             <div class="dice">
-                <img src="/advice-generator-app-main/images/icon-dice.svg" alt="">
+                <img src="advice-generator-app-main/images/icon-dice.svg" alt="">
             </div>
         </div>
     </div>
