--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <!-- ADVICE -->
             <div class="advice">
-                <p class="adviceText">&#8220Click dice to get advice&#8220</p>
+                <p class="adviceText">*Click dice to get advice*</p>
             </div>
             <!-- LINE -->
             <div class="decoration" style="background-image:url(advice-generator-app-main/images/pattern-divider-desktop.svg);">
